<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">TaggerBot</string>
    <string name="dialog_button_close">Dismiss</string>
    <string name="dialog_login_text">
        You have not entered any login data.
        Please do so in the settings activity reachable with the options menu.
    </string>
    <string name="dialog_login_title">Login data missing!</string>
    <string name="dialog_taginfo_delete">Delete tag</string>
    <string name="dialog_taginfo_text">Info text:</string>
    <string name="dialog_taginfo_title">Tag info</string>
    <string name="dialog_taginfo_name">Name:</string>
    <string name="updateservice_error">Error while updating location on server! Check your network connection.</string>
    <string name="prefs_login">Login data</string>
    <string name="prefs_login_summary"></string>
    <string name="prefs_login_password">Password</string>
    <string name="prefs_login_password_key">login.password</string>
    <string name="prefs_login_password_summary">Password to use for login.</string>
    <string name="prefs_login_user">Username</string>
    <string name="prefs_login_user_key">login.user</string>
    <string name="prefs_login_user_summary">Your username on the Tagger server.</string>
    <string name="prefs_updater">Updater settings</string>
    <string name="prefs_updater_summary"></string>
    <string name="prefs_updater_keepalive">Background updates</string>
    <string name="prefs_updater_keepalive_key">updater.keepalive</string>
    <string name="prefs_updater_keepalive_summary">Keeps on updating the server location when map view is not visible.</string>
    <string name="settings">Settings</string>
    <string name="showmap_menu_createtag">Create tag</string>
    <string name="showmap_menu_exit">Exit</string>
    <string name="showmap_menu_satellite">Toggle Satellite</string>
    <string name="showmap_menu_showprefs">Settings</string>
    <string name="showmap_toast_loginfail">Login failed! Please check your login data.</string>
    <string name="showmap_toast_nolocation">Can't set tag without valid GPS location!</string>
    <string name="showmap_toast_nonetwork">No connection to server! Please check your login data and network connection.</string>
    <string name="statusbar_text">Updating Tagger location...</string>
</resources>
